@@ -544,15 +544,18 @@ CalSpringSystem *CalModel::getSpringSystem()
 }
 
  /*****************************************************************************/
-/** Returns an approximation of the global bounding box of the model.
+/** Returns the global bounding box of the model.
   *
   * This function returns the global bounding box of the model.
+  *
+  * @param precision : indicate if the function need to compute a 
+  *        correct bounding box
   *
   * @return bounding box.
   *****************************************************************************/
 
 
-CalBoundingBox & CalModel::getBoundingBox()
+CalBoundingBox & CalModel::getBoundingBox(bool precision)
 {
 	CalVector v;
 	v = CalVector(1.0f,0.0f,0.0f);	
@@ -567,21 +570,50 @@ CalBoundingBox & CalModel::getBoundingBox()
 	m_boundingBox.plane[4].setNormal(v);
 	v = CalVector(0.0f,0.0f,-1.0f);	
 	m_boundingBox.plane[5].setNormal(v);
+
+	if(precision)
+		m_pSkeleton->calculateBoundingBoxes();
+
 	
 	std::vector<CalBone *> & vectorBone =  m_pSkeleton->getVectorBone();
 		
 	std::vector<CalBone *>::iterator iteratorBone;
 	for(iteratorBone = vectorBone.begin(); iteratorBone != vectorBone.end(); ++iteratorBone)
 	{
-		CalVector translation = (*iteratorBone)->getTranslationAbsolute();
-		
-		int planeId;
-		for(planeId = 0; planeId < 6; ++planeId)
+		// If it's just an approximation that are needed then
+		// we just compute the bounding box from the skeleton
+
+		if(!precision || !(*iteratorBone)->getCoreBone()->isBoundingBoxPrecomputed())
 		{
-			if(m_boundingBox.plane[planeId].eval(translation) < 0.0f)
+			
+			CalVector translation = (*iteratorBone)->getTranslationAbsolute();
+			
+			int planeId;
+			for(planeId = 0; planeId < 6; ++planeId)
 			{
-				m_boundingBox.plane[planeId].setPosition(translation);
+				if(m_boundingBox.plane[planeId].eval(translation) < 0.0f)
+				{
+					m_boundingBox.plane[planeId].setPosition(translation);
+				}
 			}
+		}
+		else
+		{
+			CalBoundingBox localBoundingBox = (*iteratorBone)->getBoundingBox();
+			CalVector points[8];
+			localBoundingBox.computePoints(points);
+			
+			for(int i=0; i < 8; i++)
+			{				
+				int planeId;
+				for(planeId = 0; planeId < 6; ++planeId)
+				{
+					if(m_boundingBox.plane[planeId].eval(points[i]) < 0.0f)
+					{
+						m_boundingBox.plane[planeId].setPosition(points[i]);
+					}
+				}
+			}				
 		}
 	}
 	
